--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "zip": "npm run build && node src/zip.js"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "dayjs": "^1.11.13",
+    "element-plus": "^2.9.7",
     "vue": "^3.3.4"
   },
   "devDependencies": {
